# azino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clang-format.py  kill.sh  setup.sh
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  dummy_bench.cpp
benchmark/dummy_bench/: CMakeLists.txt  dummy_bench.cpp
example/client/: CMakeLists.txt  main.cpp
example/echo_c++/: CMakeLists.txt  client.cpp  server.cpp
include/azino/: background_task.h  client.h  comparator.h  kv.h  options.h  partition.h  range.h  status.h
sdk/: CMakeLists.txt
sdk/include/: txrwbuffer.h  txwritebuffer.h
sdk/src/: client.cpp
sdk/test/: test_sdk.cpp
service/: kv.pb.cc  kv.pb.h  partition.pb.cc  partition.pb.h  partition.proto  tx.pb.cc  tx.pb.h  tx.proto
service/storage/: storage.pb.cc  storage.pb.h  storage.proto
service/txindex/: txindex.pb.cc  txindex.pb.h  txindex.proto
service/txplanner/: txplanner.pb.cc  txplanner.pb.h  txplanner.proto
storage/: CMakeLists.txt  main.cpp
storage/include/: service.h  storage.h  utils.h
storage/leveldb/: dbimpl.cpp
storage/service/: storageserviceimpl.cpp
storage/src/: dbimpl.cpp  utils.cpp
storage/test/: test_dbimpl.cpp
txindex/: CMakeLists.txt  main.cpp
txindex/include/: depedence.h  index.h  metric.h  mvccvalue.h  partition_manager.h  persist.h  persistor.h  reporter.h  service.h
txindex/persistor/: persistor.cpp
txindex/reporter/: depreporter.cpp
txindex/service/: txopserviceimpl.cpp
txindex/simpletxindex/: kvbucket.cpp  kvregion.cpp  mvccvalue.cpp  txindex.cpp  txindeximpl.cpp
txindex/src/: depedence.cpp  depreporter.cpp  kvbucket.cpp  kvregion.cpp  metric.cpp  mvccvalue.cpp  partition_manager.cpp  persist.cpp  persistor.cpp  txindex.cpp  txopserviceimpl.cpp
txindex/test/: test_txindeximpl.cpp
txplanner/: CMakeLists.txt  main.cpp
txplanner/dependency/: dependency.cpp  gc.cpp  txid.cpp  txidtable.cpp
txplanner/include/: dependency.h  gc.h  metric.h  partition_manager.h  planner.h  point.h  service.h  txid.h  txidtable.h
txplanner/service/: dependenceserviceimpl.cpp  txserviceimpl.cpp
txplanner/src/: gc.cpp  metric.cpp  partition_manager.cpp  partitonserviceimpl.cpp  planner.cpp  regionserviceimpl.cpp  txid.cpp  txidtable.cpp  txserviceimpl.cpp
txplanner/test/: test_txplanner.cpp
